[project]
name = "echo"
dynamic = ["version"]
description = "Echo Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/echo"]
sources = ["app"]

[tool.hatch.version]
path = "VERSION"

